# selection_sort_omp

./: CMakeLists.txt  Makefile  README.md  Runfile  generate_data.cpp  select_sort_omp.cpp
